<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Wydział Elektroniki, Telekomunikacji i Informatyki, Politechnika Gdańska
  ~ This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or   (at your option) any later version.
  ~
  ~ Copy of GNU General Public License is available at http://www.gnu.org/licenses/gpl-3.0.html
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/titleEditView"
        android:textStyle="bold"
        android:singleLine="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText android:id="@+id/editName"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Imię"
            android:inputType="text" />

        <EditText android:id="@+id/editSurname"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Nazwisko"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tryb wyświetlania aktywności"
            android:id="@+id/textView10" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/planActivityTypeRadioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duży"
                android:id="@+id/bigPlanActivityTypeRadioButton"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Średni"
                android:id="@+id/mediumPlanActivityTypeRadioButton"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mały"
                android:id="@+id/smallPlanActivityTypeRadioButton"
                android:layout_marginLeft="10dp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tryb wyświetlania czynności"
            android:id="@+id/textView11" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planActionTypeRadioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zaawansowany"
                android:id="@+id/advancedPlanActionTypeRadioButton"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Podstawowy"
                android:id="@+id/basicPlanActionTypeRadioButton"
                android:layout_marginLeft="10dp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dźwięk timera:"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pathToTimer"
            android:visibility="visible"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Odsłuchaj"
            android:onClick="listenTimer"
            android:id="@+id/listenButton"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wybierz..."
            android:id="@+id/button12"
            android:layout_marginLeft="15dp"
            android:onClick="chooseTimerPath" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Widok planu aktywności:"
            android:id="@+id/e_textViewWidokPlanuAktywnosci" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planTypeRadioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lista"
                android:id="@+id/listPlanTypeRadioButton"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Slajd"
                android:id="@+id/slidePlanTypeRadioButton"
                android:layout_marginLeft="10dp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Zapisz"
        android:onClick="saveEdition"
        android:id="@+id/saveUserButton"
        android:layout_marginTop="15dp" />


</LinearLayout>